# morphy

./: README.md  pyproject.toml
classifiers/: classifier_dispatch.py  state_machine_classifier.py  state_machine_classifier_logic.md  taxonomy_classifier.py  taxonomy_classifier_logic.md  taxonomy_classifier_rules.md  temporal_classifier_logic.md  temporal_taxonomy_classifier.py
config/: __init__.py  default_params.py  scenarios.py
notebooks/: morphy_scenarios.ipynb
plotting/: plot2d_helpers.py  plot_helpers.py  scenario_helpers.py
scripts/: animate_scenario.py  animate_scenario_2d.md  animate_scenario_2d.py  animate_scenario_3d.md  animate_scenario_3d.py  animate_scenario_3d_eto.py  animate_scenario_3d_eto_box.py  current_figure_calls.md  plot_scenario_3d_taxonomy.py  plot_scenario_3d_taxonomy_3d.py  run_scenarios.py  run_scenarios_2d.md  run_scenarios_2d.py  run_scenarios_3d.md  run_scenarios_3d.py  scenarios_sweep.py  scenarios_sweep_plots.md  scenarios_sweep_plots.py  single_scenario_3d.md  single_scenario_3d.py  single_scenario_3d_3classifiers.py  single_scenario_classifier_temporal.py  single_scenario_plots.md  single_scenario_plots.py  sweep_all_9_scenarios_3classifiers.py  unstable_scenarios_sweep.py
scripts/docs/: animate_scenario_2d.md  animate_scenario_3d.md  plot_scenario_3d_taxonomy.md  run_scenarios_3d.md
viabilitykernels/: __init__.py  odes.py  phase_plane.py  simulation.py  viability.py
