[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphy"
version = "0.1.0"
description = "Scientific Python toolkit for simulating and visualizing viability-kernel dynamics in a scaffold-cell-matrix system."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Cris Micheli" }
]
keywords = [
  "dynamical-systems",
  "ode",
  "simulation",
  "viability-kernel",
  "scientific-python",
  "biophysical-modeling"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "pandas>=2.0",
  "pillow>=9.5"
]

[project.urls]
Homepage = "https://github.com/crismicheli/morphy"
Repository = "https://github.com/crismicheli/morphy"
Issues = "https://github.com/crismicheli/morphy/issues"

[project.scripts]
run-scenarios = "scripts.run_scenarios:main"
animate-scenario = "scripts.animate_scenario:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.0",
  "ipykernel>=6.0",
  "jupyter>=1.0"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["viability_kernels", "viability_kernels.*", "config", "config.*"]
exclude = ["notebooks*", "figures*", "docs*", "tests*"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
  "notebooks",
  "figures",
  "docs"
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
